2014-08-25  Tomas Popela  <tpopela@redhat.com>

        Add support for little-endian PowerPC64
        https://bugs.webkit.org/show_bug.cgi?id=135647

        Reviewed by Oliver Hunt.

        * wtf/Platform.h:
        * wtf/dtoa/utils.h:

2014-02-05  Zan Dobersek  <zdobersek@igalia.com>

        Remove the WTF_COMPILER_SUPPORTS_CXX_GENERALIZED_INITIALIZERS macro
        https://bugs.webkit.org/show_bug.cgi?id=128267

        Reviewed by Andreas Kling.

        Remove the WTF_COMPILER_SUPPORTS_CXX_GENERALIZED_INITIALIZERS macro that was manually defined for compilers
        that support the C++11 initializer lists. The feature is well supported in Clang, MSVC and also GCC. It
        was actually already used unguarded in HashSet.

        * wtf/Compiler.h:
        * wtf/HashMap.h:
        (WTF::HashMap::HashMap):
        * wtf/Vector.h:
        (WTF::Vector::Vector):

2014-05-25  Milan Crha  <mcrha@redhat.com>

        [Stable] [GTK] GdiObject.h missing in WebKitGTK 2.4.1 tarball
        https://bugs.webkit.org/show_bug.cgi?id=132814

        Reviewed by Carlos Garcia Campos.

        Add missing files to fix the mingw32 build.

        * GNUmakefile.list.am:

2014-04-19  Filip Pizlo  <fpizlo@apple.com>

        Make it easier to check if an integer sum would overflow
        https://bugs.webkit.org/show_bug.cgi?id=131900

        Reviewed by Darin Adler.

        * wtf/CheckedArithmetic.h:
        (WTF::checkedSum):
        (WTF::sumOverflows):

2014-03-10  Jer Noble  <jer.noble@apple.com>

        Improve WeakPtr operators.
        https://bugs.webkit.org/show_bug.cgi?id=130053

        Reviewed by Andreas Kling.

        Replace the "operator!()" with an explicit bool operator.  Add an "operator->()".

        * wtf/WeakPtr.h:
        (WTF::WeakPtr::operator bool):
        (WTF::WeakPtr::operator->):

2014-02-19  Jon Honeycutt  <jhoneycutt@apple.com>

        Crash in WTF::StringBuilder::append()

        https://bugs.webkit.org/show_bug.cgi?id=125817