@@ -1,3 +1,13 @@
+2014-10-23  Alberto Garcia  <berto@igalia.com>
+
+        [GTK] Fix build on Hurd
+        https://bugs.webkit.org/show_bug.cgi?id=138003
+
+        Reviewed by Carlos Garcia Campos.
+
+        * wtf/InlineASM.h:
+        * wtf/Platform.h:
+
 2014-08-25  Tomas Popela  <tpopela@redhat.com>
 
         Add support for little-endian PowerPC64
